--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,17 @@ set(CMAKE_C_STANDARD 11)
 
 
 file(GLOB srcs "srcs/*.c")
+file(GLOB libc "srcs/libc/*.c")
+file(GLOB bonus "srcs/bonus/*.c")
+file(GLOB shared "srcs/shared/*.c")
 file(GLOB include "include/*.h")
 
 add_library(
         malloc SHARED
         ${srcs}
+        ${libc}
+        ${shared}
+        ${bonus}
         ${include}
         main.c
 )
