--- a/.github/workflows/macos-testscript.yml
+++ b/.github/workflows/macos-testscript.yml
@@ -13,5 +13,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: test.sh
-      run: ./test.sh
+    - name: make test
+      run: make test
