wrote tests for realloc

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,9 @@ set(CMAKE_C_STANDARD 11)
 
 include_directories(../include)
 
+file(GLOB test_srcs "*.c")
+add_executable(test ${test_srcs})
+
 add_executable(test_double_free test_double_free.c ../libft_malloc_x86_64_Darwin.so)
 add_executable(test_invalid_free test_free_invalid_ptr.c ../libft_malloc_x86_64_Darwin.so)
 add_executable(test_allocation test_allocation.c ../libft_malloc_x86_64_Darwin.so)
