--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_C_STANDARD 11)
 file(GLOB srcs "srcs/*.c")
 file(GLOB libc "srcs/libc/*.c")
 file(GLOB bonus "srcs/bonus/*.c")
+file(GLOB logging "srcs/logging/*.c")
 file(GLOB shared "srcs/shared/*.c")
 file(GLOB include "include/*.h")
 
@@ -16,6 +17,7 @@ add_library(
         ${libc}
         ${shared}
         ${bonus}
+        ${logging}
         ${include}
 )
 
